# hw_obs_bench

./: .clang-format  .gdbinit  .gitmodules  CMakeLists.txt  run.sh  sync.sh
example/: CMakeLists.txt  append_object.cpp  batch_delete_objects.cpp  delete_object.cpp  get_bucket_storage_info.cpp  list_bucket_objects.cpp  put_object.cpp  put_object_file.cpp
include/: config.h  huawei_obs.h  log.h
src/: CMakeLists.txt  hw_obs_bench.cpp  hw_obs_test.cpp
